src/data_stage1_2/ro.y.output
Terminals unused in grammar

   BOGUS_TOKEN_ID
   WORLD


语法

    0 $accept: start $end

    1 start: library

    2 any_identifier: identifier
    3               | prev_declared_variable_name

    4 prev_declared_variable_name: prev_declared_variable_name_token

    5 library: program_var_declarations_list

    6 program_var_declarations_list: %empty
    7                              | program_var_declarations_list var_init_decl

    8 identifier: identifier_token

    9 constant: numeric_literal
   10         | character_string
   11         | boolean_literal

   12 numeric_literal: integer_literal
   13                | real_literal

   14 integer_literal: signed_integer

   15 signed_integer: integer
   16               | '+' integer
   17               | '-' integer

   18 real_literal: signed_real

   19 signed_real: real
   20            | '+' real
   21            | '-' real

   22 real: real_token

   23 integer: integer_token

   24 boolean_literal: TRUE
   25                | FALSE

   26 character_string: character_string_token

   27 elementary_type_name: numeric_type_name
   28                     | elementary_string_type_name
   29                     | BOOL

   30 numeric_type_name: signed_integer_type_name
   31                  | real_type_name

   32 signed_integer_type_name: DINT

   33 real_type_name: REAL

   34 elementary_string_type_name: STRING

   35 robot_data_type_name: position_data_type_name
   36                     | reference_system_data_type_name
   37                     | tool_data_type_name
   38                     | overlapping_data_type_name
   39                     | dynamic_data_type_name
   40                     | percentage_data_type_name

   41 position_data_type_name: AXISPOS
   42                        | CARTPOS
   43                        | ROBAXISPOS
   44                        | AUXAXISPOS
   45                        | ROBCARTPOS

   46 reference_system_data_type_name: CARTREFSYS

   47 tool_data_type_name: TOOL

   48 overlapping_data_type_name: OVLREL
   49                           | OVLABS

   50 dynamic_data_type_name: DYNAMIC

   51 percentage_data_type_name: PERCENT
   52                          | PERC200

   53 var_init_decl: var1_init_decl
   54              | structured_var_init_decl

   55 var1_init_decl: var1_list ':' simple_spec_init

   56 var1_list: identifier
   57          | var1_list ',' identifier

   58 structured_var_init_decl: var1_list ':' initialized_structure

   59 initialized_structure: robot_data_type_name
   60                      | robot_data_type_name ASSIGN structure_initialization

   61 structure_initialization: '(' structure_element_initialization_list ')'

   62 structure_element_initialization_list: structure_element_initialization
   63                                      | structure_element_initialization_list ',' structure_element_initialization

   64 structure_element_initialization: structure_element_name ASSIGN constant
   65                                 | structure_element_name ASSIGN structure_initialization

   66 structure_element_name: any_identifier

   67 simple_spec_init: elementary_type_name
   68                 | elementary_type_name ASSIGN constant


Terminals, with rules where they appear

$end (0) 0
'(' (40) 61
')' (41) 61
'+' (43) 16 20
',' (44) 57 63
'-' (45) 17 21
':' (58) 55 58
error (256)
BOGUS_TOKEN_ID (258)
identifier_token (259) 8
prev_declared_variable_name_token (260) 4
integer_token (261) 23
real_token (262) 22
TRUE (263) 24
FALSE (264) 25
character_string_token (265) 26
BOOL (266) 29
DINT (267) 32
REAL (268) 33
STRING (269) 34
AXISPOS (270) 41
CARTPOS (271) 42
ROBAXISPOS (272) 43
AUXAXISPOS (273) 44
ROBCARTPOS (274) 45
CARTREFSYS (275) 46
TOOL (276) 47
OVLREL (277) 48
OVLABS (278) 49
DYNAMIC (279) 50
WORLD (280)
PERCENT (281) 51
PERC200 (282) 52
ASSIGN (283) 60 64 65 68


Nonterminals, with rules where they appear

$accept (35)
    左： 0
start (36)
    左： 1, 右： 0
any_identifier (37)
    左： 2 3, 右： 66
prev_declared_variable_name (38)
    左： 4, 右： 3
library (39)
    左： 5, 右： 1
program_var_declarations_list (40)
    左： 6 7, 右： 5 7
identifier (41)
    左： 8, 右： 2 56 57
constant (42)
    左： 9 10 11, 右： 64 68
numeric_literal (43)
    左： 12 13, 右： 9
integer_literal (44)
    左： 14, 右： 12
signed_integer (45)
    左： 15 16 17, 右： 14
real_literal (46)
    左： 18, 右： 13
signed_real (47)
    左： 19 20 21, 右： 18
real (48)
    左： 22, 右： 19 20 21
integer (49)
    左： 23, 右： 15 16 17
boolean_literal (50)
    左： 24 25, 右： 11
character_string (51)
    左： 26, 右： 10
elementary_type_name (52)
    左： 27 28 29, 右： 67 68
numeric_type_name (53)
    左： 30 31, 右： 27
signed_integer_type_name (54)
    左： 32, 右： 30
real_type_name (55)
    左： 33, 右： 31
elementary_string_type_name (56)
    左： 34, 右： 28
robot_data_type_name (57)
    左： 35 36 37 38 39 40, 右： 59 60
position_data_type_name (58)
    左： 41 42 43 44 45, 右： 35
reference_system_data_type_name (59)
    左： 46, 右： 36
tool_data_type_name (60)
    左： 47, 右： 37
overlapping_data_type_name (61)
    左： 48 49, 右： 38
dynamic_data_type_name (62)
    左： 50, 右： 39
percentage_data_type_name (63)
    左： 51 52, 右： 40
var_init_decl (64)
    左： 53 54, 右： 7
var1_init_decl (65)
    左： 55, 右： 53
var1_list (66)
    左： 56 57, 右： 55 57 58
structured_var_init_decl (67)
    左： 58, 右： 54
initialized_structure (68)
    左： 59 60, 右： 58
structure_initialization (69)
    左： 61, 右： 60 65
structure_element_initialization_list (70)
    左： 62 63, 右： 61 63
structure_element_initialization (71)
    左： 64 65, 右： 62 63
structure_element_name (72)
    左： 66, 右： 64 65
simple_spec_init (73)
    左： 67 68, 右： 55


State 0

    0 $accept: . start $end

    $default  reduce using rule 6 (program_var_declarations_list)

    start                          转到状态 1
    library                        转到状态 2
    program_var_declarations_list  转到状态 3


State 1

    0 $accept: start . $end

    $end  shift, and go to state 4


State 2

    1 start: library .

    $default  reduce using rule 1 (start)


State 3

    5 library: program_var_declarations_list .
    7 program_var_declarations_list: program_var_declarations_list . var_init_decl

    identifier_token  shift, and go to state 5

    $default  reduce using rule 5 (library)

    identifier                转到状态 6
    var_init_decl             转到状态 7
    var1_init_decl            转到状态 8
    var1_list                 转到状态 9
    structured_var_init_decl  转到状态 10


State 4

    0 $accept: start $end .

    $default  接受


State 5

    8 identifier: identifier_token .

    $default  reduce using rule 8 (identifier)


State 6

   56 var1_list: identifier .

    $default  reduce using rule 56 (var1_list)


State 7

    7 program_var_declarations_list: program_var_declarations_list var_init_decl .

    $default  reduce using rule 7 (program_var_declarations_list)


State 8

   53 var_init_decl: var1_init_decl .

    $default  reduce using rule 53 (var_init_decl)


State 9

   55 var1_init_decl: var1_list . ':' simple_spec_init
   57 var1_list: var1_list . ',' identifier
   58 structured_var_init_decl: var1_list . ':' initialized_structure

    ':'  shift, and go to state 11
    ','  shift, and go to state 12


State 10

   54 var_init_decl: structured_var_init_decl .

    $default  reduce using rule 54 (var_init_decl)


State 11

   55 var1_init_decl: var1_list ':' . simple_spec_init
   58 structured_var_init_decl: var1_list ':' . initialized_structure

    BOOL        shift, and go to state 13
    DINT        shift, and go to state 14
    REAL        shift, and go to state 15
    STRING      shift, and go to state 16
    AXISPOS     shift, and go to state 17
    CARTPOS     shift, and go to state 18
    ROBAXISPOS  shift, and go to state 19
    AUXAXISPOS  shift, and go to state 20
    ROBCARTPOS  shift, and go to state 21
    CARTREFSYS  shift, and go to state 22
    TOOL        shift, and go to state 23
    OVLREL      shift, and go to state 24
    OVLABS      shift, and go to state 25
    DYNAMIC     shift, and go to state 26
    PERCENT     shift, and go to state 27
    PERC200     shift, and go to state 28

    elementary_type_name             转到状态 29
    numeric_type_name                转到状态 30
    signed_integer_type_name         转到状态 31
    real_type_name                   转到状态 32
    elementary_string_type_name      转到状态 33
    robot_data_type_name             转到状态 34
    position_data_type_name          转到状态 35
    reference_system_data_type_name  转到状态 36
    tool_data_type_name              转到状态 37
    overlapping_data_type_name       转到状态 38
    dynamic_data_type_name           转到状态 39
    percentage_data_type_name        转到状态 40
    initialized_structure            转到状态 41
    simple_spec_init                 转到状态 42


State 12

   57 var1_list: var1_list ',' . identifier

    identifier_token  shift, and go to state 5

    identifier  转到状态 43


State 13

   29 elementary_type_name: BOOL .

    $default  reduce using rule 29 (elementary_type_name)


State 14

   32 signed_integer_type_name: DINT .

    $default  reduce using rule 32 (signed_integer_type_name)


State 15

   33 real_type_name: REAL .

    $default  reduce using rule 33 (real_type_name)


State 16

   34 elementary_string_type_name: STRING .

    $default  reduce using rule 34 (elementary_string_type_name)


State 17

   41 position_data_type_name: AXISPOS .

    $default  reduce using rule 41 (position_data_type_name)


State 18

   42 position_data_type_name: CARTPOS .

    $default  reduce using rule 42 (position_data_type_name)


State 19

   43 position_data_type_name: ROBAXISPOS .

    $default  reduce using rule 43 (position_data_type_name)


State 20

   44 position_data_type_name: AUXAXISPOS .

    $default  reduce using rule 44 (position_data_type_name)


State 21

   45 position_data_type_name: ROBCARTPOS .

    $default  reduce using rule 45 (position_data_type_name)


State 22

   46 reference_system_data_type_name: CARTREFSYS .

    $default  reduce using rule 46 (reference_system_data_type_name)


State 23

   47 tool_data_type_name: TOOL .

    $default  reduce using rule 47 (tool_data_type_name)


State 24

   48 overlapping_data_type_name: OVLREL .

    $default  reduce using rule 48 (overlapping_data_type_name)


State 25

   49 overlapping_data_type_name: OVLABS .

    $default  reduce using rule 49 (overlapping_data_type_name)


State 26

   50 dynamic_data_type_name: DYNAMIC .

    $default  reduce using rule 50 (dynamic_data_type_name)


State 27

   51 percentage_data_type_name: PERCENT .

    $default  reduce using rule 51 (percentage_data_type_name)


State 28

   52 percentage_data_type_name: PERC200 .

    $default  reduce using rule 52 (percentage_data_type_name)


State 29

   67 simple_spec_init: elementary_type_name .
   68                 | elementary_type_name . ASSIGN constant

    ASSIGN  shift, and go to state 44

    $default  reduce using rule 67 (simple_spec_init)


State 30

   27 elementary_type_name: numeric_type_name .

    $default  reduce using rule 27 (elementary_type_name)


State 31

   30 numeric_type_name: signed_integer_type_name .

    $default  reduce using rule 30 (numeric_type_name)


State 32

   31 numeric_type_name: real_type_name .

    $default  reduce using rule 31 (numeric_type_name)


State 33

   28 elementary_type_name: elementary_string_type_name .

    $default  reduce using rule 28 (elementary_type_name)


State 34

   59 initialized_structure: robot_data_type_name .
   60                      | robot_data_type_name . ASSIGN structure_initialization

    ASSIGN  shift, and go to state 45

    $default  reduce using rule 59 (initialized_structure)


State 35

   35 robot_data_type_name: position_data_type_name .

    $default  reduce using rule 35 (robot_data_type_name)


State 36

   36 robot_data_type_name: reference_system_data_type_name .

    $default  reduce using rule 36 (robot_data_type_name)


State 37

   37 robot_data_type_name: tool_data_type_name .

    $default  reduce using rule 37 (robot_data_type_name)


State 38

   38 robot_data_type_name: overlapping_data_type_name .

    $default  reduce using rule 38 (robot_data_type_name)


State 39

   39 robot_data_type_name: dynamic_data_type_name .

    $default  reduce using rule 39 (robot_data_type_name)


State 40

   40 robot_data_type_name: percentage_data_type_name .

    $default  reduce using rule 40 (robot_data_type_name)


State 41

   58 structured_var_init_decl: var1_list ':' initialized_structure .

    $default  reduce using rule 58 (structured_var_init_decl)


State 42

   55 var1_init_decl: var1_list ':' simple_spec_init .

    $default  reduce using rule 55 (var1_init_decl)


State 43

   57 var1_list: var1_list ',' identifier .

    $default  reduce using rule 57 (var1_list)


State 44

   68 simple_spec_init: elementary_type_name ASSIGN . constant

    integer_token           shift, and go to state 46
    real_token              shift, and go to state 47
    TRUE                    shift, and go to state 48
    FALSE                   shift, and go to state 49
    character_string_token  shift, and go to state 50
    '+'                     shift, and go to state 51
    '-'                     shift, and go to state 52

    constant          转到状态 53
    numeric_literal   转到状态 54
    integer_literal   转到状态 55
    signed_integer    转到状态 56
    real_literal      转到状态 57
    signed_real       转到状态 58
    real              转到状态 59
    integer           转到状态 60
    boolean_literal   转到状态 61
    character_string  转到状态 62


State 45

   60 initialized_structure: robot_data_type_name ASSIGN . structure_initialization

    '('  shift, and go to state 63

    structure_initialization  转到状态 64


State 46

   23 integer: integer_token .

    $default  reduce using rule 23 (integer)


State 47

   22 real: real_token .

    $default  reduce using rule 22 (real)


State 48

   24 boolean_literal: TRUE .

    $default  reduce using rule 24 (boolean_literal)


State 49

   25 boolean_literal: FALSE .

    $default  reduce using rule 25 (boolean_literal)


State 50

   26 character_string: character_string_token .

    $default  reduce using rule 26 (character_string)


State 51

   16 signed_integer: '+' . integer
   20 signed_real: '+' . real

    integer_token  shift, and go to state 46
    real_token     shift, and go to state 47

    real     转到状态 65
    integer  转到状态 66


State 52

   17 signed_integer: '-' . integer
   21 signed_real: '-' . real

    integer_token  shift, and go to state 46
    real_token     shift, and go to state 47

    real     转到状态 67
    integer  转到状态 68


State 53

   68 simple_spec_init: elementary_type_name ASSIGN constant .

    $default  reduce using rule 68 (simple_spec_init)


State 54

    9 constant: numeric_literal .

    $default  reduce using rule 9 (constant)


State 55

   12 numeric_literal: integer_literal .

    $default  reduce using rule 12 (numeric_literal)


State 56

   14 integer_literal: signed_integer .

    $default  reduce using rule 14 (integer_literal)


State 57

   13 numeric_literal: real_literal .

    $default  reduce using rule 13 (numeric_literal)


State 58

   18 real_literal: signed_real .

    $default  reduce using rule 18 (real_literal)


State 59

   19 signed_real: real .

    $default  reduce using rule 19 (signed_real)


State 60

   15 signed_integer: integer .

    $default  reduce using rule 15 (signed_integer)


State 61

   11 constant: boolean_literal .

    $default  reduce using rule 11 (constant)


State 62

   10 constant: character_string .

    $default  reduce using rule 10 (constant)


State 63

   61 structure_initialization: '(' . structure_element_initialization_list ')'

    identifier_token                   shift, and go to state 5
    prev_declared_variable_name_token  shift, and go to state 69

    any_identifier                         转到状态 70
    prev_declared_variable_name            转到状态 71
    identifier                             转到状态 72
    structure_element_initialization_list  转到状态 73
    structure_element_initialization       转到状态 74
    structure_element_name                 转到状态 75


State 64

   60 initialized_structure: robot_data_type_name ASSIGN structure_initialization .

    $default  reduce using rule 60 (initialized_structure)


State 65

   20 signed_real: '+' real .

    $default  reduce using rule 20 (signed_real)


State 66

   16 signed_integer: '+' integer .

    $default  reduce using rule 16 (signed_integer)


State 67

   21 signed_real: '-' real .

    $default  reduce using rule 21 (signed_real)


State 68

   17 signed_integer: '-' integer .

    $default  reduce using rule 17 (signed_integer)


State 69

    4 prev_declared_variable_name: prev_declared_variable_name_token .

    $default  reduce using rule 4 (prev_declared_variable_name)


State 70

   66 structure_element_name: any_identifier .

    $default  reduce using rule 66 (structure_element_name)


State 71

    3 any_identifier: prev_declared_variable_name .

    $default  reduce using rule 3 (any_identifier)


State 72

    2 any_identifier: identifier .

    $default  reduce using rule 2 (any_identifier)


State 73

   61 structure_initialization: '(' structure_element_initialization_list . ')'
   63 structure_element_initialization_list: structure_element_initialization_list . ',' structure_element_initialization

    ','  shift, and go to state 76
    ')'  shift, and go to state 77


State 74

   62 structure_element_initialization_list: structure_element_initialization .

    $default  reduce using rule 62 (structure_element_initialization_list)


State 75

   64 structure_element_initialization: structure_element_name . ASSIGN constant
   65                                 | structure_element_name . ASSIGN structure_initialization

    ASSIGN  shift, and go to state 78


State 76

   63 structure_element_initialization_list: structure_element_initialization_list ',' . structure_element_initialization

    identifier_token                   shift, and go to state 5
    prev_declared_variable_name_token  shift, and go to state 69

    any_identifier                    转到状态 70
    prev_declared_variable_name       转到状态 71
    identifier                        转到状态 72
    structure_element_initialization  转到状态 79
    structure_element_name            转到状态 75


State 77

   61 structure_initialization: '(' structure_element_initialization_list ')' .

    $default  reduce using rule 61 (structure_initialization)


State 78

   64 structure_element_initialization: structure_element_name ASSIGN . constant
   65                                 | structure_element_name ASSIGN . structure_initialization

    integer_token           shift, and go to state 46
    real_token              shift, and go to state 47
    TRUE                    shift, and go to state 48
    FALSE                   shift, and go to state 49
    character_string_token  shift, and go to state 50
    '+'                     shift, and go to state 51
    '-'                     shift, and go to state 52
    '('                     shift, and go to state 63

    constant                  转到状态 80
    numeric_literal           转到状态 54
    integer_literal           转到状态 55
    signed_integer            转到状态 56
    real_literal              转到状态 57
    signed_real               转到状态 58
    real                      转到状态 59
    integer                   转到状态 60
    boolean_literal           转到状态 61
    character_string          转到状态 62
    structure_initialization  转到状态 81


State 79

   63 structure_element_initialization_list: structure_element_initialization_list ',' structure_element_initialization .

    $default  reduce using rule 63 (structure_element_initialization_list)


State 80

   64 structure_element_initialization: structure_element_name ASSIGN constant .

    $default  reduce using rule 64 (structure_element_initialization)


State 81

   65 structure_element_initialization: structure_element_name ASSIGN structure_initialization .

    $default  reduce using rule 65 (structure_element_initialization)
